@@ -66,7 +66,7 @@ public class GraphQLUtil {
 		Map<String, String> manualClassByExtendedClass = new HashMap<>();
 		Map<String, String> packageByClass = new HashMap<>();
 		List<String> filesToSkip =
-				Arrays.asList("PO.java", "Lookup.java", "TestCase.java", "EventObject.java", "EventListener.java");
+				List.of("PO.java", "Lookup.java", "TestCase.java", "EventObject.java", "EventListener.java");
 		String deprecatedClass = "@Deprecated" + System.lineSeparator() + "public class ";
 
 		// Cycle through the interfaces to find which tables we have
@@ -379,8 +379,8 @@ public class GraphQLUtil {
 		}
 		sql.append(" ORDER BY TableName");
 
-		try (PreparedStatement preparedStatement = DB.prepareStatement(sql.toString(), null)) {
-			ResultSet resultSet = preparedStatement.executeQuery();
+		try (PreparedStatement preparedStatement = DB.prepareStatement(sql.toString(), null);
+		     ResultSet resultSet = preparedStatement.executeQuery()) {
 			while (resultSet.next()) {
 				resultSetConsumer.accept(resultSet);
 			}
